# SCHEMA-RASPP

./: .gitignore  PORTING.md  README.md  pdbfile.py  pdbseq.py  pyproject.toml  pytest.ini  raspp.py  rasppcurve.py  schema.py  schemacontacts.py  schemaenergy.py  schemarandom.py  schemautil.py
.github/workflows/: ci.yml
tests/: conftest.py  test_regression.py
tests/golden/: contacts.txt  curve_xo4.txt  curve_xo7.txt  energies.out  pdbseq.out
